[tool.poetry]
name = "crypto"
version = "0.1.0"
description = ""
authors = ["Tomas Vancoillie <vancoillietomas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flash = "^1.0.3"
Flask = "^1.1.2"
discord = "^1.0.1"
requests = "^2.25.1"
APScheduler = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
